blog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    app: blog
