blog/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  namespace: blog
  labels:
    app: blog
    component: backend
spec:
  selector:
    matchLabels:
      app: blog
      component: backend
  serviceName: "mysql-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: blog
        component: backend
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
      labels:
        app: blog
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
