blog/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: blog
  labels:
    app: blog
    component: backend
spec:
  type: ClusterIP
  selector:
    app: blog
    component: backend
  ports:
  - port: 3306
    targetPort: 3306
